--- a/src/pages/hire-me.html
+++ b/src/pages/hire-me.html
@@ -11,7 +11,7 @@ css: hire-me
 			<h1 class="page-header__title">Let's Work Together!</h1>
 		</div>
 	</header>
-	
+
 	<section class="section">
 		<div class="container">
 			<p class="h3">Building simple yet powerful websites for small businesses and creative entrepreneurs.</p>
@@ -68,6 +68,26 @@ css: hire-me
 		<div class="container">
 			<h2>What My Clients Say</h2>
 			<div class="testimonials">
+				<blockquote class="testimonial">
+					<header class="testimonial__header">
+						<img class="testimonial__image" src="/assets/images/testimonial-aliz.webp" alt="Alíz Ulbrecht" width="100" height="100">
+						<div class="testimonial__author">
+							<cite class="testimonial__name">Alíz Ulbrecht</cite>
+							<span class="testimonial__job">infant movement therapist</span> &ndash; <a class="testimonial__link" href="https://piciri.hu/" target="_blank" rel="noreferrer noopener">Piciri</a>
+						</div>
+					</header>
+					<p class="testimonial__text">As a solo entrepreneur, it seemed like a good idea at first to create my own website. I soon realised that it wasn't that easy and that a website that was randomly put together isn't credible enough. After this realisation came Roland, who not only created my website with amazing speed and incredible expertise, but also the <a href="https://rolandszabo.photo/en/">professional photography</a> for the website while I was working. Through all our conversations and discussions, it was clear that Roland is truly a professional at what he does. If anyone is in the same shoes as I am, I wholeheartedly recommend you to trust Roland with your website and photos.</p>
+				</blockquote>
+				<blockquote class="testimonial">
+					<header class="testimonial__header">
+						<img class="testimonial__image" src="/assets/images/testimonial-bence.webp" alt="Bence Pátkay" width="100" height="100">
+						<div class="testimonial__author">
+							<cite class="testimonial__name">Bence Pátkay</cite>
+							<span class="testimonial__job">photographer</span> &ndash; <a class="testimonial__link" href="https://bigbenslens.com/" target="_blank" rel="noreferrer noopener">Big Ben's Lens</a>
+						</div>
+					</header>
+					<p class="testimonial__text">Roland is very experienced and it shows in his work, as he has given me many useful tips on how to optimize the site, which I feel have saved me a lot of time compared to if I had to figure them out myself. I could rely on him for everything from choosing the hosting package to the finishing touches. I had online calls with him to discuss my ideas and we modelled the site after them. During the calls I asked for several changes, which he responded to very flexibly and professionally. There was hardly a case that he could not solve. I would highly recommend him to anyone who wants a well-functioning, user-friendly and fast website.</p>
+				</blockquote>
 				<blockquote class="testimonial">
 					<header class="testimonial__header">
 						<img class="testimonial__image" src="/assets/images/testimonial-pete.webp" alt="Pete Zaborszky" width="100" height="100">
