--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -14,14 +14,55 @@ css: portfolio
 	</header>
 
 	<div class="container">
+		<!-- Template in portfolio-empty.html -->
+
+		<article class="portfolio">
+			<h2 class="portfolio__title">Show Violin</h2>
+			<p class="h3">Custom Multilingual WordPress Website for a Professional Violinist</p>
+			<p></p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/showviolin-1.webp" alt="Show Violin" width="1280" height="820">
+				<img class="portfolio__image" src="/assets/images/portfolio/showviolin-2.webp" alt="Show Violin" width="1280" height="820">
+				<img class="portfolio__image" src="/assets/images/portfolio/showviolin-3.webp" alt="Show Violin" width="1280" height="820">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> Orsi needed a versatile and elegant online presence that would serve audiences across multiple languages. Essential features included a dynamic event system for listing upcoming and past performances, a gallery to showcase <a href="https://rolandszabo.photo/en/">stunning branding photography</a>, and the ability to embed videos. Additionally, a comprehensive contact form was required to handle various booking requests. Starting from scratch, we also created a coming soon page to generate early interest.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I built a custom WordPress website equipped with robust multilingual capabilities, ensuring an accessible and inclusive experience for all visitors. The integrated event system allows easy management of performances, while the curated photo gallery and embedded videos highlight the artist’s talents. The advanced contact form, available in multiple languages, streamlines the booking process, making it simple for potential clients to inquire about services. From the initial coming soon page to the final, fully functional site, every element was designed to reflect the violinist’s professionalism, artistry, and international appeal.</p>
+		</article>
+
+		<article class="portfolio">
+			<h2 class="portfolio__title">Piciri</h2>
+			<p class="h3">Confidence-Inspiring WordPress Site for an Infant Movement Specialist</p>
+			<p></p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/piciri-1.webp" alt="Piciri" width="" height="">
+				<img class="portfolio__image" src="/assets/images/portfolio/piciri-2.webp" alt="Piciri" width="" height="">
+				<img class="portfolio__image" src="/assets/images/portfolio/piciri-3.webp" alt="Piciri" width="" height="">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> The infant movement specialist behind piciri.hu needed a brand-new online presence that would clearly explain her services, inspire trust, and reflect the calming, professional nature of her work. Key requirements included integrating a testimonial system for ongoing credibility-building and ensuring exceptional performance to provide a smooth user experience. Additionally, high-quality photography was needed to showcase the therapist at work, reinforcing authenticity and connection.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong> I developed a custom WordPress website using my proprietary starter theme, ensuring near-perfect PageSpeed scores. I captured professional, in-session photographs to humanize and enhance the site’s visual storytelling. A dedicated testimonial feature was integrated to allow the specialist to easily add and manage feedback as her practice grows. The calm, professional design and layout, coupled with streamlined content and high performance, delivers a trustworthy, accessible online platform for her clients.</p>
+		</article>
+
+		<article class="portfolio">
+			<h2 class="portfolio__title">Big Ben's Lens</h2>
+			<p class="h3">Custom WordPress Portfolio Website for a Car Photographer</p>
+			<p></p>
+			<div class="portfolio__gallery">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/bigbenslens-1.webp" alt="Big Ben's Lens" width="1400" height="820">
+				<img class="portfolio__image" src="/assets/images/portfolio/bigbenslens-2.webp" alt="Big Ben's Lens" width="1400" height="820">
+				<img class="portfolio__image" src="/assets/images/portfolio/bigbenslens-3.webp" alt="Big Ben's Lens" width="1400" height="820">
+			</div>
+			<p><strong class="text-light">Challenge:</strong> Ben needed a powerful yet user-friendly platform to showcase his photography portfolio and services. His previous solution, built on Google Sites, was sluggish, inflexible, and lacked the performance and capabilities he required. A key objective was an efficient way to manage and display his large, high-resolution images without compromising loading speed or user experience.</p>
+			<p class="mb-0"><strong class="text-light">Solution:</strong>  I developed a custom WordPress website tailored for photographers, enabling Ben to organize his extensive image collection into easy-to-browse categories. The platform automatically resizes large files upon upload, ensuring lightning-fast load times and preserving image quality. By guiding Ben through hosting choices and site optimization, I delivered a flexible, high-performance website that allows him to effortlessly present his work and delight his audience.</p>
+		</article>
+
 		<article class="portfolio">
 			<h2 class="portfolio__title">Taliga Ingatlan</h2>
 			<p class="h3">Website Redesign and Optimization of a Joint Representative</p>
 			<p></p>
 			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/taliga-ingatlan-1.webp" alt="Taliga Ingatlan" width="1200" height="850">
-				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-2.webp" alt="Taliga Ingatlan" width="1200" height="850">
-				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-3.webp" alt="Taliga Ingatlan" width="1200" height="850">
+				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/taliga-ingatlan-1.webp" alt="Taliga Ingatlan" width="1400" height="800">
+				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-2.webp" alt="Taliga Ingatlan" width="1400" height="800">
+				<img class="portfolio__image" src="/assets/images/portfolio/taliga-ingatlan-3.webp" alt="Taliga Ingatlan" width="1400" height="800">
 			</div>
 			<p><strong class="text-light">Challenge:</strong> The Taliga Ingatlan website needed a comprehensive redesign to address its poor performance, despite minimal content. The previous website also lacked the capability for the owner to edit any content, limiting flexibility. The objective was to enhance speed, responsiveness, and accessibility, ensuring readability for a broad demographic, including elderly users.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> The redesigned website, built on WordPress with my custom, lightweight theme, significantly improves performance, optimizing for fast load times and responsiveness. By using WordPress, the owner now has the flexibility to easily edit and manage all content on the site. An intuitive problem report form was developed, ensuring accessibility for all demographics. The content presentation was refined to maximize clarity and accessibility, creating a cohesive and user-friendly experience.</p>
@@ -51,19 +92,6 @@ css: portfolio
 			</div>
 			<p><strong class="text-light">Challenge:</strong> The website needed to showcase my photography in a simple, distraction-free way while also being convenient for me to manage. Additionally, the site needed to be multilingual to cater to both English and Hungarian-speaking audiences.</p>
 			<p class="mb-0"><strong class="text-light">Solution:</strong> I built the website with Eleventy to manage it all in code, hosting it on Netlify to avoid server costs and complex databases. I've been developing this site for four years, constantly refining the design to keep it sleek, user-friendly, and fully optimized for showcasing my portraits.</p>
-		</article>
-
-		<article class="portfolio">
-			<h2 class="portfolio__title">Polinvent</h2>
-			<p class="h3">AI-Driven Pipe Repair Robot User Interface Design</p>
-			<p>Polinvent's AI-driven pipe repair robot is a small yet powerful machine used in industrial and civil environments.</p>
-			<div class="portfolio__gallery">
-				<img class="portfolio__image portfolio__image--featured" src="/assets/images/portfolio/polinvent-1.webp" alt="Polinvent" width="1920" height="1080" loading="lazy">
-				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-2.webp" alt="Polinvent" width="1920" height="1080" loading="lazy">
-				<img class="portfolio__image" src="/assets/images/portfolio/polinvent-3.webp" alt="Polinvent" width="1920" height="1080" loading="lazy">
-			</div>
-			<p><strong class="text-light">Challenge:</strong> The interface needed to fit within a 16:9 display without any scrolling, and the design had to be accessible to workers wearing gloves. This posed the challenge of creating large, easy-to-press buttons without sacrificing the clarity of the information displayed on-screen.</p>
-			<p class="mb-0"><strong class="text-light">Solution:</strong> I designed an intuitive interface where all vital functions and information were accessible without the need for scrolling. By strategically placing large buttons and arranging data in a compact yet readable format, I ensured the UI would be easy to navigate, even for gloved users. This design helped streamline operations, allowing workers to save time and operate the machine efficiently in challenging conditions.</p>
 		</article>
 
 		<article class="portfolio">
