--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,6 +3,7 @@ permalink: /about/
 layout: layouts/base.html
 title: About
 css: about
+description: "Learn about my 15+ years of experience in web design. I specialize in creating simple, effective websites for creatives and entrepreneurs."
 ---
 
 <main class="main about">
