--- a/src/pages/hire-me.html
+++ b/src/pages/hire-me.html
@@ -3,6 +3,7 @@ permalink: /hire-me/
 layout: layouts/base.html
 title: Hire Me
 css: hire-me
+description: "Need a professional website? Let's create a user-friendly, engaging site that showcases your brand. Contact me to get started."
 ---
 
 <main class="main about">
