--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,6 +3,7 @@ permalink: /
 layout: layouts/base.html
 title: Home
 css: home
+description: "Simple, minimalist web design tailored for small businesses and creatives. Build a website that works for you. Contact me today!"
 ---
 
 <main class="main home">
