--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -3,6 +3,7 @@ permalink: /portfolio/
 layout: layouts/base.html
 title: Portfolio
 css: portfolio
+description: "View my web design portfolio featuring clean, functional websites for small businesses, creatives, and entrepreneurs worldwide."
 ---
 
 <main class="main about">
