--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -2,6 +2,7 @@
 permalink: /services/
 layout: layouts/base.html
 title: Services
+description: "Custom web design services for small businesses, artists, and entrepreneurs. From hosting to launch, I make the process easy."
 ---
 
 <main class="main">
