--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -6,89 +6,137 @@ description: "Custom web design services for small businesses, artists, and entr
 ---
 
 <main class="main">
-	<header class="page-header">
-		<div class="container">
-			<h1 class="page-header__title">Services</h1>
-			<p class="page-header__text">Building a website should feel empowering, not overwhelming. I'm here to take care of all the details, whether you need a brand-new site or improvements to your existing one, ensuring the process is smooth and stress-free from start to finish.</p>
-		</div>
+	<header class="page-header container">
+		<h1 class="page-header__title">Services</h1>
+		<p class="page-header__text">Building a website should feel empowering, not overwhelming. I'm here to take care of all the details, whether you need a brand-new site or improvements to your existing one, ensuring the process is smooth and stress-free from start to finish. Choose the option that best describes you:</p>
 	</header>
 
-	<header class="subheading">
-		<div class="container">
-			<h2 class="subheading__title">Creating Your Brand New Website</h2>
-			<p class="subheading__text">Don't have a website yet? Not for long, I'm here to help you!</p>
-		</div>
-	</header>
-
-	<section class="section">
-		<div class="services container">
+	<section class="section container">
+		<h2 class="mt-1 mb-0"><i class="fa-solid fa-user text-light icon-left"></i> I'm an Individual</h2>
+		<p>For professionals, freelancers, and creatives who need a simple, effective online presence.</p>
+		<div class="services">
 			<article class="service service--pink">
 				<header class="service__header">
-					<i class="service__icon fa-brands fa-wordpress text-pink"></i>
-					<h3 class="service__title">WordPress Website</h3>
+					<i class="service__icon fa-solid fa-address-card"></i>
+					<h3 class="service__title h4">Digital Business Card</h3>
 				</header>
-				<p><strong class="text-light">Overview:</strong> Tailored for those who want the flexibility of managing their own content, WordPress is a powerful and popular choice. With my twelve years of experience, I craft custom WordPress themes that are lightweight, fast, and easy to manage.</p>
-				<p><strong class="text-light">Ideal For:</strong> Creatives or small businesses who need a dynamic, regularly updated website with a user-friendly admin interface.</p>
-				<p><strong class="text-light">Features:</strong></p>
-				<ul class="mb-0">
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Custom-built themes for optimal performance</li>
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Scalable and easy to update</li>
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Secure and SEO-friendly</li>
-				</ul>
+				<p>A sleek, one-page website with your essential details, contact info, and social links.</p>
+				<p class="text-smaller mb-0">Perfect for freelancers, consultants, and professionals who need a polished online presence without the complexity of a full website.</p>
 			</article>
 			<article class="service service--pink">
 				<header class="service__header">
-					<i class="service__icon fa-solid fa-code text-pink"></i>
-					<h3 class="service__title">Static HTML/CSS Website</h3>
+					<i class="service__icon fa-solid fa-thumbs-up"></i>
+					<h3 class="service__title h4">Personal Brand Website</h3>
 				</header>
-				<p><strong class="text-light">Overview:</strong> For clients who want a feather weight, blazing fast, small site that doesn't require frequent updates, I offer custom-built static websites using HTML, CSS, and Eleventy. This approach provides superior performance and minimal maintenance.</p>
-				<p><strong class="text-light">Ideal For:</strong> Clients who need a small site for displaying information, like an online business card, that prioritizes speed and simplicity.</p>
-				<p><strong class="text-light">Features:</strong></p>
-				<ul class="mb-0">
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Blazing fast load times</li>
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Low maintenance, low upkeep costs</li>
-					<li><i class="fa-solid fa-check-circle text-pink icon-left"></i> Easy to extend and update as needed</li>
-				</ul>
+				<p>A multi-page site to showcase your work, story, and expertise.</p>
+				<p class="text-smaller mb-0">Ideal for creatives, public speakers, and coaches looking to build credibility and attract opportunities.</p>
 			</article>
 		</div>
 	</section>
 
-	<header class="subheading">
-		<div class="container">
-			<h2 class="subheading__title mt-0">Improving Your Existing Website</h2>
-			<p class="subheading__text">Already have a website that needs tweaking? Let me make it better!</p>
+	<section class="section container">
+		<h2 class="mt-1 mb-0"><i class="fa-solid fa-hat-wizard text-light icon-left"></i> I'm an Entrepreneur</h2>
+		<p>For those growing their personal brand, attracting clients, and selling their services.</p>
+		<div class="services">
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-palette"></i>
+					<h3 class="service__title h4">Portfolio Showcase</h3>
+				</header>
+				<p>A visually engaging website designed to highlight your work with large images, case studies, and easy navigation.</p>
+				<p class="text-smaller mb-0">Ideal for artists, designers, photographers, and creative professionals.</p>
+			</article>
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-calendar-check"></i>
+					<h3 class="service__title h4">Booking & Appointment Website</h3>
+				</header>
+				<p>A professional site with an integrated scheduling system, allowing clients to book appointments directly.</p>
+				<p class="text-smaller mb-0">Perfect for consultants, wellness professionals, and service-based businesses that rely on bookings.</p>
+			</article>
 		</div>
-	</header>
+	</section>
 
-	<section class="section">
-		<div class="container services">
+	<section class="section container">
+		<h2 class="mt-1 mb-0"><i class="fa-solid fa-building text-light icon-left"></i> I Have a Small Business</h2>
+		<p>For businesses that need a strong online presence to attract and convert customers.</p>
+		<div class="services">
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-briefcase"></i>
+					<h3 class="service__title h4">Small Business Website</h3>
+				</header>
+				<p>A professional, multi-page website with clear service descriptions, customer testimonials, and contact options.</p>
+				<p class="text-smaller mb-0">Tailored for local businesses, agencies, and service providers looking to establish trust and credibility.</p>
+			</article>
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-cart-shopping"></i>
+					<h3 class="service__title h4">Online Store</h3>
+				</header>
+				<p>A lightweight, conversion-focused e-commerce website powered by WooCommerce.</p>
+				<p class="text-smaller mb-0">Great for small businesses selling physical or digital products, offering a seamless shopping experience.</p>
+			</article>
+		</div>
+	</section>
+
+	<section class="section container">
+		<h2 class="mt-1 mb-0"><i class="fa-solid fa-users-between-lines text-light icon-left"></i> I’m Running a Campaign or Community</h2>
+		<p>For nonprofits, educators, and those launching an initiative.</p>
+		<div class="services">
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-filter"></i>
+					<h3 class="service__title h4">Landing Page Funnel</h3>
+				</header>
+				<p>A high-converting single-page site designed for lead generation, product launches, or event promotions.</p>
+				<p class="text-smaller mb-0">Perfect for marketing campaigns or businesses running ads.</p>
+			</article>
+			<article class="service service--pink">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-people-group"></i>
+					<h3 class="service__title h4">Nonprofit or Community Website</h3>
+				</header>
+				<p>A purpose-driven website that helps nonprofits, charities, and community projects share their mission, raise funds, and engage supporters.</p>
+			</article>
+		</div>
+	</section>
+
+	<section class="section container">
+		<h2 class="mt-1 mb-0"><i class="fa-solid fa-wrench text-light icon-left"></i>Optional Add-ons & Services</h2>
+		<p>Already have a website but need improvements? These services ensure your site works better for your business and visitors.</p>
+		<div class="services">
 			<article class="service service--yellow">
 				<header class="service__header">
-					<i class="service__icon fa-solid fa-gauge-high text-yellow"></i>
-					<h3 class="service__title">Performance Optimization</h3>
+					<i class="service__icon fa-solid fa-magic-wand-sparkles"></i>
+					<h3 class="service__title h4">Website Redesign & Optimization</h3>
 				</header>
-				<p><strong class="text-light">Overview:</strong> If your current website is sluggish or underperforming, I can help. I specialize in optimizing load times and ensuring your site runs smoothly. No need to alter your design or content; this service is all about speed.</p>
-				<p><strong class="text-light">Ideal For:</strong> Anyone with an existing website that needs a performance boost without a complete redesign.</p>
-				<p><strong class="text-light">Features:</strong></p>
-				<ul class="mb-0">
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved load times</li>
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced user experience through faster navigation</li>
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> SEO benefits from a quicker site</li>
-				</ul>
+				<p>If your website feels outdated, cluttered, or isn't getting results, I can refresh its design, improve usability, and make sure it aligns with your goals.</p>
+				<p class="text-smaller mb-0">Whether you need a complete overhaul or just a few refinements, I’ll help your site look and function better.</p>
 			</article>
 			<article class="service service--yellow">
 				<header class="service__header">
-					<i class="service__icon fa-solid fa-paint-roller text-yellow"></i>
-					<h3 class="service__title">Design & UX Enhancements</h3>
+					<i class="service__icon fa-solid fa-gauge-high"></i>
+					<h3 class="service__title h4">Performance Enhancements</h3>
 				</header>
-				<p><strong class="text-light">Overview:</strong> Beyond performance, I also offer design and user experience improvements. This could involve refining your site's layout, navigation, or overall aesthetic to better engage your audience.</p>
-				<p><strong class="text-light">Ideal For:</strong> Clients who are happy with their current content but feel their site could be more visually appealing or easier to use.</p>
-				<p><strong class="text-light">Features:</strong></p>
-				<ul class="mb-0">
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Improved navigation and user flow</li>
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Modern, clean design updates</li>
-					<li><i class="fa-solid fa-check-circle text-yellow icon-left"></i> Enhanced mobile responsiveness</li>
-				</ul>
+				<p>I fine-tune your site for faster load times, remove unnecessary bloat, and optimize the backend so your visitors enjoy a smooth, frustration-free experience.</p>
+				<p class="text-smaller mb-0">A slow website can cost you visitors and rankings. A faster website also boosts SEO and engagement.</p>
+			</article>
+			<article class="service service--yellow">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-diamond-turn-right"></i>
+					<h3 class="service__title h4"><abbr title="User Experience">UX</abbr> & Navigation Improvements</h3>
+				</header>
+				<p>If visitors are struggling to find what they need, it’s time for a UX refresh.</p>
+				<p class="text-smaller mb-0">I analyze and refine your site’s layout, structure, and navigation to make it more intuitive, ensuring visitors stay longer and take action.</p>
+			</article>
+			<article class="service service--yellow">
+				<header class="service__header">
+					<i class="service__icon fa-solid fa-filter"></i>
+					<h3 class="service__title h4">On-Site <abbr title="Search Engine Optimization">SEO</abbr> & Visibility Boost</h3>
+				</header>
+				<p>A beautifully designed website won’t help if people can’t find it. I optimize key on-page elements like headings, metadata, image alt tags, and site structure to improve your rankings on Google.</p>
+				<p class="text-smaller mb-0">No shady tricks—just best practices to help your site get noticed by the right audience.</p>
 			</article>
 		</div>
 	</section>
